# Flashattention-Cuda

./: .gitignore  CMakeLists.txt  README.md
examples/: minimal_main.cu
include/fa/: api.hpp  autotune.hpp  config.hpp  forward_kernels.cuh  row_compute.hpp  softmax.hpp  tensor.hpp  tile_loader.hpp  traits.hpp  workspace.hpp
src/: api.cu  autotune.cu  forward_kernels.cu  forward_splitk.cu
